# webhook-inspector

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
tests/: test_app.py  test_signing.py
webhook_inspector/: __init__.py  app.py  signing.py  store.py
